Implemented task 5: - migrated from pure Selenium implementation to Carina.