@@ -1,8 +1,7 @@
 package ua.solvd.demoblaze.pages.impl;
 
-import org.openqa.selenium.TimeoutException;
+import com.zebrunner.carina.webdriver.decorator.ExtendedWebElement;
 import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.FindBy;
 import ua.solvd.demoblaze.pages.BasePage;
 
@@ -11,32 +10,31 @@ import java.util.List;
 public class CartPage extends BasePage {
 
     @FindBy(css = "#tbodyid tr")
-    private List<WebElement> cartItemRows;
+    private List<ExtendedWebElement> cartItemRows;
+
+    @FindBy(css = "#tbodyid tr")
+    private ExtendedWebElement firstCartItemRow;
 
     @FindBy(css = "#tbodyid tr td:nth-child(2)")
-    private List<WebElement> cartItemNames;
+    private List<ExtendedWebElement> cartItemNames;
 
     @FindBy(css = "#tbodyid tr td:nth-child(3)")
-    private List<WebElement> cartItemPrices;
+    private List<ExtendedWebElement> cartItemPrices;
 
     public CartPage(WebDriver driver) {
         super(driver);
     }
 
     public int getCartItemsCount() {
-        try {
-            waitForListToLoad(cartItemRows, "Cart Rows");
-            return cartItemRows.size();
-        } catch (TimeoutException e) {
-            return 0;
-        }
+        firstCartItemRow.isElementPresent(MINIMUM_TIMEOUT);
+        return cartItemRows.size();
     }
 
     public String getFirstCartItemName() {
-        return cartItemNames.get(0).getText();
+        return cartItemNames.getFirst().getText();
     }
 
     public String getFirstCartItemPrice() {
-        return cartItemPrices.get(0).getText();
+        return cartItemPrices.getFirst().getText();
     }
 }
